# hopter-quick-start

./: .gitignore  Cargo.toml  README.md  flash-board.sh  memory.x  stm32f411-discovery.patch  stm32f412-discovery.patch
.cargo/: config.toml
hopter-conf-params/: Cargo.toml
hopter-conf-params/src/: lib.rs
src/: main.rs
